add : test cases and swagger api documentation for 6 queries
